# plotjuggler-ros-plugins

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.autosave  README.md  package.xml
.github/workflows/: ros-humble.yaml  ros-jazzy.yaml  ros-rolling.yaml  ros1.yaml  ros2.yaml
launch/: plotjuggler.launch
plugins/: CMakeLists.txt  dialog_select_ros_topics.cpp  dialog_select_ros_topics.h  dialog_select_ros_topics.ui  dialog_with_itemlist.h  parser_configuration.cpp  parser_configuration.h  publisher_select_dialog.h  publisher_select_dialog.ui  qnodedialog.cpp  qnodedialog.h  rule_editing.cpp  shape_shifter_factory.hpp
plugins/DataLoadROS/: dataload_ros.cpp  dataload_ros.h
plugins/DataLoadROS2/: dataload_ros2.cpp  dataload_ros2.h
plugins/DataStreamROS/: datastream_ROS.cpp  datastream_ROS.h
plugins/DataStreamROS2/: datastream_ros2.cpp  datastream_ros2.h  rosbag2_helper.hpp
plugins/RosoutPublisher/: logs_table_model.cpp  logs_table_model.hpp  logwidget.ui  modelfilter.cpp  modelfilter.hpp  rosout_publisher.cpp  rosout_publisher.h
plugins/TopicPublisherROS/: statepublisher_rostopic.cpp  statepublisher_rostopic.h
plugins/TopicPublisherROS2/: generic_publisher.h  publisher_ros2.cpp  publisher_ros2.h
plugins/ros1_introspection/: .gitignore  CMakeLists.txt  LICENSE  README.md  contributors.txt
plugins/ros1_introspection/include/ros_type_introspection/: builtin_types.hpp  helper_functions.hpp  ros_field.hpp  ros_introspection.hpp  ros_message.hpp  ros_type.hpp  stringtree_leaf.hpp  substitution_rule.hpp
plugins/ros1_introspection/include/ros_type_introspection/details/: conversion_impl.hpp  exceptions.hpp
plugins/ros1_introspection/include/ros_type_introspection/utils/: shape_shifter.hpp  span.hpp  tree.hpp  variant.hpp
plugins/ros1_introspection/src/: ros_field.cpp  ros_introspection.cpp  ros_message.cpp  ros_type.cpp  stringtree_leaf.cpp  substitution_rule.cpp
plugins/ros1_parsers/: covariance_util.h  diagnostic_msg.h  fiveai_stamped_diagnostic.h  header_msg.h  imu_msg.h  joint_trajectories_msg.h  jointstates_msg.h  moveit_display_trajectories.h  odometry_msg.h  pal_statistics_msg.h  plotjuggler_msgs.h  pose_msg.h  quaternion_msg.h  ros1_parser.cpp  ros1_parser.h  tf_msg.h  twist_msg.h
plugins/ros2_introspection/: README.md
plugins/ros2_introspection/include/ros2_introspection/: ros2_introspection.hpp  stringtree.hpp  tree.hpp
plugins/ros2_introspection/src/: ros2_introspection.cpp  stringtree.cpp
plugins/ros2_parsers/: covariance_util.h  diagnostic_msg.h  generic_subscription.hpp  header_msg.h  imu_msg.h  jointstates_msg.h  odometry_msg.h  pal_statistics_msg.h  pj_statistics_msg.h  plotjuggler_msgs.h  pose_msg.h  quaternion_msg.h  ros2_parser.cpp  ros2_parser.h  tf_msg.h  twist_msg.h
plugins/ros_parsers/: ros1_parser.cpp  ros1_parser.h  ros2_parser.cpp  ros2_parser.h
src/: CMakeLists.txt  dialog_select_ros_topics.h  dialog_with_itemlist.ui  parser_configuration.cpp  qnodedialog.cpp  qnodedialog.ui  rule_editing.h  rule_editing.ui  shape_shifter_factory.hpp
src/DataLoadROS/: dataload_ros.cpp  dataload_ros.h
src/DataLoadROS2/: dataload_ros2.cpp  dataload_ros2.h
src/DataStreamROS/: datastream_ROS.cpp  datastream_ROS.h
src/DataStreamROS2/: datastream_ros2.cpp  datastream_ros2.h
src/RosoutPublisher/: logs_table_model.hpp  logwidget.cpp  logwidget.hpp  rosout_publisher.cpp  rosout_publisher.h
src/TopicPublisherROS/: statepublisher_rostopic.h
src/TopicPublisherROS2/: publisher_ros2.h
src/ros_parsers/: ros1_parser.h  ros2_parser.cpp  test_ros2_parser.cpp
