<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler_ros</name>
    <version>2.3.1</version>
    <description>PlotJuggler plugin for ROS</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <license>AGPLv3</license>

    <url type="website">https://github.com/facontidavide/PlotJuggler</url>

    <author email="davide.faconti@gmail.com">Davide Faconti</author>

    <!-- ROS2 dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rcpputils</depend>
    <depend>rosbag2_transport</depend>

    <depend>plotjuggler</depend>
    <depend>plotjuggler_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_msgs</depend>

    <!-- common dependancies -->
    <depend>qtbase5-dev</depend>
    <depend>binutils</depend>
    <depend>libqt5-svg-dev</depend>
    <depend>libqt5-websockets-dev</depend>
    <depend>boost</depend>
    <depend>fmt</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
